--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio Back-End</title>
+    <title>Mi portafolio Backend</title>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="images/faviconCircular.png" type="image/png" />
   </head>
   <body>
     <header>
@@ -36,8 +37,14 @@
       <section id="about">
         <h2>Sobre mí</h2>
         <p>
-          Soy un desarrollador apasionado por crear aplicaciones back-end con tecnologías como Node.js, Express y bases de datos SQL y NoSQL. Me encanta aprender y compartir conocimientos en la comunidad de desarrollo, así puedo aprender y compartir conocimientos
-          adquiridos en mi carrera profesional; me gusta trabajar en equipo y aprender de los demás. Soy una persona autodidacta, responsable y comprometida con los proyectos en los que participo. Buscando ser el mejor colaborador o líder en el equipo de trabajo.
+          Soy un desarrollador apasionado por crear aplicaciones back-end con
+          tecnologías como Node.js, Express y bases de datos SQL y NoSQL. Me
+          encanta aprender y compartir conocimientos en la comunidad de
+          desarrollo, así puedo aprender y compartir conocimientos adquiridos en
+          mi carrera profesional; me gusta trabajar en equipo y aprender de los
+          demás. Soy una persona autodidacta, responsable y comprometida con los
+          proyectos en los que participo. Buscando ser el mejor colaborador o
+          líder en el equipo de trabajo.
         </p>
       </section>
 
@@ -57,7 +64,9 @@
     <footer id="contact">
       <h2>Contáctame por:</h2>
       <p>
-        <a href="mailto:fabian21032003@gmail.com" target="_blank">
+        <a
+          href="mailto:fabian21032003@gmail.com?subject=Contactar&body=Hola, he visto tu perfil profesional y me gustaría poder comunicarme contigo"
+          target="_blank">
           <i class="bx-fw bx bx-md bxl-gmail"></i>Correo electrónico
         </a>
         <br />
@@ -73,7 +82,7 @@
         <br />
 
         <a
-          href="https://wa.me/573106173818?text=Hola,%20me%20gustaría%20obtener%20más%20información."
+          href="https://wa.me/573106173818?text=Hola,%20he%20visto%20tu%20perfil%20y%20me%20gustaría%20poder%20comunicarme%20contigo."
           target="_blank">
           <i class="bx-fw bx bx-md bxl-whatsapp"></i>WhatsApp
         </a>
@@ -85,11 +94,5 @@
   </body>
 </html>
 
-<!-- <a href="mailto:tu_correo@example.com?subject=Consulta&body=Hola, quisiera más información.">Contáctame</a>
- -->
-
 <!-- <a href="mailto:tu_correo@example.com?subject=Hola%20Mundo&body=Este%20es%20un%20mensaje.">Enviar correo</a>
- -->
-
-<!-- <a href="https://wa.me/521234567890?text=Hola,%20me%20gustaría%20obtener%20más%20información." target="_blank">Enviar mensaje</a>
  -->
